--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "postcss": "^8",
